chore: rid test show virtual thread name